style.css
/* ... */
  
  .registration-button:hover::after {
    transform: scaleX(1) translateY(-10px);
    transform-origin: bottom left;
  }

.page2{
    /* height: 150vh; */
    background-image: linear-gradient(#35289b, #37306b, rgb(0, 0, 0));
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items:center;
    width: 100%;
}

#about{
    display: flex;
    margin-top: 10%;
    width: 70%;
    align-items: center;
    /* border-radius: 24px;
    background-image: linear-gradient(to right, #273463, #8B4256);
    padding: 20px; */
}

p{
    margin: 0;
}

.title{
    font-family: assistant-extrabold;
    color:#d4d2de;
}
.content{
    font-family: assistant;
    color: #d4d2de;
}

@media screen and (min-width: 768px){
    .title{
        font-size: 36px;
    }
    .content{
        font-size: 20px;
    }
    #about .title{
        font-size: 48px;
    }
    .info-box .title, .info-box-wide .title{
        font-size: 32px;
    } 
    .footnote{
        color: #d4d2de;
        font-size: 18px;
    }
    .info-column{
        display: flex;
        flex-direction: column;
        margin-left: 2%;
        margin-right: 2%;
        width: 46%;
        margin-top: 20px;
        margin-bottom: 10px;
        align-items: center;
    }
    .info-box-wide{
        margin-left: 2%;
        margin-right: 2%;
        width:calc(29% - 30px);
        /* background-color: #482763; */
    }
}
@media screen and (max-width: 768px){
    .title{
        font-size: 24px;
    }
    .content{
        font-size: 16px;
    }
    .info-box .title, .info-box-wide .title{
        font-size: 24px;
    } 
    .footnote{
        color: #d4d2de;
        font-size: 14px;
    }
    .info-column{
        display: flex;
        flex-direction: column;
        margin-left: 2%;
        margin-right: 2%;
        width: 96%;
        margin-top: 20px;
        margin-bottom: 10px;
        align-items: center;
    }
    .info-box-wide{
        margin-left: 2%;
        margin-right: 2%;
        width:calc(96% - 30px);
        /* background-color: #482763; */
    }
    .info-box-slim{
        width: 60%;
    }
}

#about .title{
    margin-right: 5%;
    /* background: linear-gradient(to right, );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; */
    color: #ebb762;
}
#about .content{
    margin-left: 5%;
}

.info{
    display: flex;
    flex-wrap: wrap;
    width: 70%;
        /* align-items: center; */
    justify-content: center;
    margin-top: 5%;
    margin-bottom: 100px;
}
.info-box, .info-box-wide{
    background-color: transparent;
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    padding: 15px;
    border-radius: 24px;
    background-color: #273463;
    /* position: relative; */
}

@media screen and (min-width: 768px){
    #schedule{
        font-size: 48px;
    }
    .day .title{
        font-size: 32px;
    }
}
@media screen and (max-width: 768px){
    #schedule{
        font-size: 28px;
    }
    .day .title{
        font-size: 24px;
    }
}

#schedule{
    align-self: flex-start;
    margin-left: 15%;
    margin-bottom: 45px;
}

.schedule{
    display: flex;
    justify-content: center;
    background-color: black;
    flex-wrap: wrap;
    padding-bottom: 80px;
}
.day{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 45px;
    /* flex: 28.3%; */
    /* width: 25%;
    margin-left: 1.65%;
    margin-right: 1.65%; */
}
.day .title{
    margin-bottom: 15px;
}
table{
    border-spacing: 0 0;
    border-collapse: separate;
    border: none;
}
.day table{
    color: #d4d2de;
    width: 100%;
    /* height: 100%; */
}

@media screen and (min-width: 1000px){
    .day{
        width: 28.3vw;
    }
    #day1{
        border-left: 4px solid #d4d2de;
        border-right: 2px solid #d4d2de;
    }
    #day2{
        border-left: 2px solid #d4d2de;
        border-right: 2px solid #d4d2de;
    }
    #day3{
        border-left: 2px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
}
@media screen and (min-width: 768px) and (max-width: 1000px){
    .day{
        width: 42.5%;
    }
    .row1{
        margin-left: 20%;
        margin-right: 20%;
    }
    #day1{
        border-left: 4px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
    #day2{
        border-left: 4px solid #d4d2de;
        border-right: 2px solid #d4d2de;
    }
    #day3{
        border-left: 2px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
}
@media screen and (max-width: 768px){
    .day{
        width: 70%;
    }
    #day1{
        border-left: 4px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
    #day2{
        border-left: 4px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
    #day3{
        border-left: 4px solid #d4d2de;
        border-right: 4px solid #d4d2de;
    }
}


td{
    padding: 0;
}

@media screen and (min-width: 768px){
    .time, .event{
        font-size: 20px;
    }
}
@media screen and (max-width: 768px){
    .time, .event{
        font-size: 16px;
    }
}

.time, .event{
    border: none;
    vertical-align: top;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    word-wrap: break-word;
    padding-top: 20px;
    padding-bottom: 20px;
}

.time{
    width: 40%;
    /* width: 50%; */
    text-align: right;
    vertical-align: top;
    word-wrap: break-word;
    padding-left: 40px;
    padding-right: 20px;
}
.event{
    width: 60%;
    padding-left: 20px;
    padding-right: 40px;
}

.page4{
    width: 100%;
    background: linear-gradient(black, #37306b, #a14c84);
    display: flex;
    flex-direction: column;
    align-items: center;
}
#sponsors{
    color: #ebb762
}
.coming-soon{
    height: 50vh;
    display: flex;
    justify-content: center;
    align-items: center;
    /* background-color: white; */
   filter: brightness(0.5);
    width: 100%;
}

@media screen and (min-width: 768px){
    .page4 .content{
        font-size: 24px;
    }
}
/* ... */

